[package]
name = "gossip-glomers"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/bin/echo.rs"
name = "echo"

[[bin]]
path = "src/bin/unique-ids.rs"
name = "unique-ids"

[[bin]]
path = "src/bin/broadcast.rs"
name = "broadcast"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
ulid = "1"
